--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/configure-pages@v5
         with:
           enablement: true
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # If necessary, use a PAT
+          token: ${{ secrets.GITHUB_TOKEN }}  # Explicitly passing the token
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Cache Restore
