--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/tailwind"]
 	path = themes/tailwind
 	url = https://github.com/tomowang/hugo-theme-tailwind.git
+[submodule "themes/hugograyscale"]
+	path = themes/hugograyscale
+	url = https://github.com/runningstream/hugograyscale.git
